istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: lendfast-mtls
  namespace: lendfast
spec:
  mtls:
    mode: PERMISSIVE
